Especificaciones en el securityConfig y el jwtAuthFilter